Fix: style toggle button dark mode

--- a/style.css
+++ b/style.css
@@ -26,27 +26,31 @@ body {
   background-color: var(--color-dark-gray);
   transition: 0.5s;
 }
+
 body.active {
   background: var(--color-white);
+}
+
+.footer-container .active {
+  background-color: pink;
 }
 
 #toggle {
   position: absolute;
   right: 2rem;
   top: 2rem;
-  width: 100px;
-  height: 50px;
+  width: 105px;
+  height: 55px;
   border-radius: 160px;
   transition: 0.5s;
   cursor: pointer;
+  background-color: var(--color-gray);
   box-shadow: insent 0 8px 60px rgba(0, 0, 0, 0.1),
     insent 0 8px 8px rgba(0, 0, 0, 0.1), insent 0 -4px 8px rgba(0, 0, 0, 0.1);
 }
 
 #toggle.active {
   background: #fff;
-  background-color: inset 0 2px 60px rgba(0, 0, 0, 0.01),
-    inset 0 2px 8px rgba(0, 0, 0, 0.01), inset 0 -4px 4px rgba(0, 0, 0, 0.05);
 }
 
 #toggle .indicator {
@@ -55,28 +59,23 @@ body.active {
   left: 0;
   width: 55px;
   height: 55px;
-  background: linear-gradient(to bottom, #444, #222);
   background-image: url(src/img/moon.svg);
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 50%;
   transform: scale(0.9);
-  box-shadow: 0 8px 40px rgba(0, 0, 0, 0.05),
-    insent 0 4px 4px rgba(255, 255, 255, 0.2),
-    insent 0 -4px 4px rgba(255, 255, 255, 0.2);
+  background-color: var(--color-dark-gray);
   transition: 0.5s;
 }
 #toggle.active .indicator {
   left: 3rem;
   top: 0rem;
-  background: linear-gradient(to bottom, #eaeaea, #f9f9f9);
   background-image: url(src/img/sun.svg);
   background-repeat: no-repeat;
   background-position: center;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1),
-    insent 0 4px 4px rgba(255, 255, 255, 1),
-    insent 0 -4px 4px rgba(255, 255, 255, 1);
+  background-color: rgb(224, 185, 25);
 }
+
 h1,
 h2,
 h3,
